# snake-backend

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.py
Snake/: snake.py
frontend/: game.html  index.html  join.html  lobby.html  main.js
frontend/js/: Food.js  Game.js  Snake.js  SpeedFood.js  Wall.js  main.js
