[tool.poetry]
name = "snake-server"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
asyncio = "^3.4.3"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
redis = {extras = ["hiredis"], version = "^4.5.5"}
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
